# CW_8_Docker

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habit/: models.py  paginations.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_periodicity_alter_habit_time_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
